syntax = "proto3";

option go_package = "./pb";

package grpc.cli.chat;

// チャット開始
message RoomListRequest {
}
message RoomListResponse {
    repeated string RoomList = 1;
}

// チャットルーム選択
message JoinRequest {
    string Name = 1;
    int32 RoomNumber = 2;
}
message JoinResponse {
    string UserID = 1;
}

// チャット通信
message ConnectRequest {
    string UserID = 1;
    string Message = 2; 
    bool RegisterStream = 3;
}
message ConnectResponse {
    string Name = 1;
    string message = 2;
}

// チャットサービス
service ChatService {
    // ルームリスト取得
    rpc GetRoomList(RoomListRequest) returns (RoomListResponse);
    // ルーム参加（とユーザー作成）
    rpc JoinRoom(JoinRequest) returns (JoinResponse);
    // チャットコネクション
    rpc Connect(stream ConnectRequest) returns (stream ConnectResponse);
}
